--- a/src/app/auth/login/login/login.page.scss
+++ b/src/app/auth/login/login/login.page.scss
@@ -59,6 +59,8 @@ ion-button.inicio{
     justify-content: center;
     align-content: center;
     align-items: center;
+    padding: 40px 0px 40px 0px;
+
 }
 
 .col_fb{
@@ -75,7 +77,7 @@ div.ion-text-center{
     margin: auto;
 }
 .fuente-colores{
-    padding: 50px 0px 50px 0px;
+    padding: 60px 0px 60px 0px;
     margin: auto;
 }
 
@@ -85,10 +87,15 @@ div.ion-text-center{
 .fb{
     width: 100%;
     margin: auto;
+    position: relative;
 }
 .label{
     padding:  5px 5px 5px 5px;
     font-size: 13px;
     margin: auto;
 
+}
+
+.centro{
+    padding: 0px 0px 0px 0px;
 }
