[#173932228] ultimos arreglos a registro Fb

--- a/src/app/auth/registro-fb/registro-fb.page.html
+++ b/src/app/auth/registro-fb/registro-fb.page.html
@@ -8,7 +8,7 @@
     
     <div class = "contendor-Ruc">
       <div>Completar Registro</div> 
-      <ion-input placeholder="Ruc/Cedula" [(ngModel)]="textInput"></ion-input>
+      <ion-input type="number" placeholder="Ruc/Cedula" [(ngModel)]="textInput"></ion-input>
     </div>
   </div>
 </ion-content>
