[#173932469] arreglo de estilo

--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -22,6 +22,8 @@
 
 
 .icono{
+    position: relative;
+    right: 15px;
     width: 20px;
     height: 20px;
 }
@@ -96,7 +98,7 @@ vertical-align: middle;
     // justify-content: end;
     // width: 100%;
     position: relative;
-    left: 100px;
+    left: 75px;
     bottom:15px;
 }
 
@@ -130,7 +132,7 @@ vertical-align: middle;
 }
 
 .contener-columna{
-    // display: inline;
+    display: block;
 }
 
 .nombre-producto{
@@ -140,6 +142,7 @@ vertical-align: middle;
     font-size: 14px;
     position: relative;
     top:20px;
+    right: 10px;
 }
 
 .producto{
@@ -165,14 +168,23 @@ vertical-align: middle;
 
 .precio{
     color: var(--ion-color-naranja-oscuro);
-    font-weight: bold;
-    font-size: large;
-     position: relative;
-    right: 16px;
+    font-weight: bolder;
+    //font-size: small;
+    position: relative;
+    //right:  5px;
 }
 
-.carrito{
+div.precio h4{
+        text-align: left;
+
+}
+
+div.carrito img{
     position: relative;
     top: 38px;
-    right: 16px;
+    left: 5px;
+}
+
+.centrar{
+    width: 70px;
 }
