--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -77,12 +77,12 @@
                                 <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos">
                             </div>
                         </div>
-                        <div class="contener-columna">
-                            <div>
-                                <h6 class="precio">$ {{productos.precio}}</h6>
+                        <div class="contener-columna centrar">
+                            <div class="precio">
+                                <h4>${{productos.precio}}</h4>
                             </div>
                             <div class="carrito">
-                                <img src="../assets/img/carrito_activo.png" width="30" height="30">
+                                <img src="../assets/img/carrito_activo.png" width="25" height="25">
                             </div>
                         </div>
                     </div>
