--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,10 @@
 <ion-header>
 
+  <div class= "menu_hamburguesa"> <img src="../assets/img/menu_lateral.png"></div>
+  <div class= "header" > <img src="../assets/img/header_final.png" size= 12></div>
+  <div class= "carrito_logo"> <img [src]="carrito" (click)="openCart(); changeCart()"></div>
+  <!--<div class= "carrito_logo"> <ion-img [src]="carrito" (click)="openCart(); changeCart()"></ion-img></div>-->
+<!--
   <ion-toolbar class="half-circle"> 
 
       <ion-row class = "container">
@@ -15,6 +20,6 @@
       </ion-row>
 
   </ion-toolbar>
-
+-->
       
 </ion-header>
