--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -123,8 +123,9 @@
               <ion-icon class="icono-input" text-right  id="iconIntro" [name]="passwordToggleIcon" style="zoom:2.0;"></ion-icon>
             </button>
           </ion-item>
-          <!--<a routerLink='/register'>¿Olvidaste tu contraseña?</a>-->
-          <p class=ion-text-right ion-text  tappable (click)="forgotPass()">
+          <!--<a routerLink='/register'>¿Olvidaste tu contraseña?</a>
+          <p class=ion-text-right ion-text  tappable (click)="forgotPass()">-->
+            <p class=ion-text-right ion-text  tappable (click)="contrasena()">
           <ion-label style="color: var(--ion-color-naranja-oscuro);">¿Olvidaste tu contraseña?</ion-label>
       </p><br>
       </ion-col>
