--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -47,6 +47,7 @@
   </ion-card>
 </ion-list>
   <ion-img src="../assets/img/pagar.png" class="pagar"></ion-img>
+  <ion-button style="--background: var(--ion-color-naranja-oscuro)" (click)= regresar()>Regresar</ion-button>
 </ion-content>
 <app-footer></app-footer>
 
