--- a/src/app/producto/producto.page.html
+++ b/src/app/producto/producto.page.html
@@ -72,9 +72,9 @@
                                 <h6 class="nombre-producto" >{{productos.nombre}}</h6>
                             </div>
                             <div class="producto-carrito">
-                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas">
+                                <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar()>
                                 <input type="text" name="" id="" class="estilo-cantidad" value="1">
-                                <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos">
+                                <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar()>
                             </div>
                         </div>
                         <div class="contener-columna centrar">
