--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -99,9 +99,11 @@
   </tr>-->
 <!--</table>-->
 
-<ion-header>
+<!--<ion-header>-->
+  <div class = 'header'>
   <div class= "logo" > <img src="../assets/img/header_login.png" size= 12></div>
-</ion-header>
+</div>
+<!--</ion-header>-->
 
 <ion-content class="animated fadeIn login auth-page inicio">
   <div class="padding-contenido">
