--- a/src/app/auth/registro/registro-exitoso/registro-exitoso.page.html
+++ b/src/app/auth/registro/registro-exitoso/registro-exitoso.page.html
@@ -1,7 +1,9 @@
-<ion-header>
+<!--<ion-header>-->
+<div class = 'header'>
   <!--<div class ="btn_regresar"> <img src="../assets/img/atras.png"  routerLink='/login'> </div>-->
   <div class= "header" > <img src="../assets/img/header_registro.png" size= 12></div>
-</ion-header>
+</div>
+<!--</ion-header>-->
 
 <ion-content>
   <div class= "fondo" > <img src="../assets/img/registro_exitoso.png" size= 12></div>
