--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -13,10 +13,12 @@
       </ion-row>
   </ion-toolbar>
 </ion-header>-->
-<ion-header>
+<!--<ion-header>-->
+  <div class = 'header'>
   <div class ="btn_regresar"> <img src="../assets/img/atras.png"  routerLink='/login'> </div>
   <div class= "header" > <img src="../assets/img/header_registro.png" size= 12></div>
-</ion-header>
+</div>
+<!--</ion-header>-->
 
 <ion-content class= "Formulario">
   <form  #form="ngForm" (ngSubmit)="register(form)"> 
