[#173932228] arreglo de validaciones de registro

--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -35,7 +35,7 @@
           <button *ngIf="url" (click)="delete()" >delete</button>
           </div> 
            <ion-item >
-             <ion-input  name="cedula" type="number" placeholder="RUC/Cedula" ngModel required></ion-input>
+             <ion-input  name="cedula" type="text" placeholder="RUC/Cedula" ngModel required></ion-input>
            </ion-item>
            <ion-item>
              <ion-input  name="nombre" type="text" placeholder="Nombre" ngModel required></ion-input>
