--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -285,3 +285,9 @@
   src: url('../assets/font/Myriad Pro Semibold.ttf');
 }
 
+@font-face{
+  font-family: 'MyriadPro-Light';
+  font-style: normal;
+  //font-weight: bold;
+  src: url('../assets/font/MyriadPro-Light.otf');
+}
