--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -1,169 +1,48 @@
-<!--<div class= "part0">
-  <ion-header>
-      <ion-toolbar> 
-          <ion-row class = "container" justify-content-center>
-              <div class= "logo" > <img src="../assets/img/cabuto.png" size= 12></div> 
-          </ion-row>
-      </ion-toolbar>
-       <table class="egt">
-      <tr>
-      <td class ="celda1">Celda 1</td>
-      <td class = "celda2" >Celda 2</td>
-      <td class = "celda3" >Celda 3</td>
-    </tr>
-  </table>  
-    </ion-header>  -->
-   
-  <!--<div class ="super">Esto debe estar por encima</div>-->
-  
-
-<!--
-<ion-header>
-  <div class= "part0">
-    <ion-toolbar> 
-        <ion-row class = "container" justify-content-center>
-            <div class= "logo" > <img src="../assets/img/cabuto.png" size= 12></div> 
-        </ion-row>
-    </ion-toolbar>
-   <div class ="super">Esto debe estar por encima</div>
-      <table class="egt">
-      <tr>
-      <td class ="celda1">Celda 1</td>
-      <td class = "celda2" >Celda 2</td>
-      <td class = "celda3" >Celda 3</td>
-    </tr>
-  </table> 
-  </div>
-</ion-header>-->
-<!--
-<ion-header>
- -<ion-toolbar class="Arriba">
-    <ion-row class = "container" justify-content-center>
-      <div class= "logo" > <img src="../assets/img/cabuto.png" size= 12></div> 
-    </ion-row>
-  </ion-toolbar>-->
-  
-  <!--<ion-toolbar class="borde">
-    <div class ="div1">1</div>
-    <div class ="div2">2</div>
-    <div class ="div3">3</div>
-    </ion-toolbar>-->
-  <!--<div class= "too">
-    
-    <ion-toolbar></ion-toolbar>
-    <ion-toolbar></ion-toolbar>
-    <ion-toolbar></ion-toolbar>
-    <ion-toolbar class="borde">
-    <div class ="div1">1</div>
-    <div class ="div2">2</div>
-    <div class ="div3">3</div>
-    </ion-toolbar>
-  </div>-->
-<!--</ion-header>-->
-<!--
-  <ion-header>
-  <div class= "logo" > <img src="../assets/img/cabuto.png" size= 12></div>
-  <div class ="div4">4</div>
-  <div class ="div5">6</div>
-  <div class ="fondo">xx</div>
-  
-  
-  <ion-toolbar class="Arriba">
-    <ion-row class = "container" justify-content-center>
-      <div class= "logo" > <img src="../assets/img/cabuto.png" size= 12></div> 
-    </ion-row>
-  </ion-toolbar>
-  
-  <ion-toolbar class="borde">
-    <div class ="div1">1</div>
-    <div class ="div2">2</div>
-    <div class ="div3">3</div>
-    </ion-toolbar>
-  <div class= "too">
-    
-    <ion-toolbar></ion-toolbar>
-    <ion-toolbar></ion-toolbar>
-    <ion-toolbar></ion-toolbar>
-    <ion-toolbar class="borde">
-    <div class ="div1">1</div>
-    <div class ="div2">2</div>
-    <div class ="div3">3</div>
-    </ion-toolbar>
-  </div>
-</ion-header>-->
-<!--<table class="egt">
-  <tr>
-    <td class ="celda1">Celda 1</td>
-    <td class = "celda2" >Celda 2</td>
-    <td class = "celda3" >Celda 3</td>
-  </tr>-->
-<!--</table>-->
-
 <!--<ion-header>-->
   <div class = 'header'>
   <div class= "logo" > <img src="../assets/img/header_login.png" size= 12></div>
 </div>
-<!--</ion-header>-->
+<!--</ion-header><br> [disabled]="form.invalid"-->
 
 <ion-content class="animated fadeIn login auth-page inicio">
-  <div class="padding-contenido">
-      <!-- Logo -->
-      <div padding-horizontal text-center class="animated fadeInDown">
-          <div class="logo"></div>
-          <!--<div class= "logo" > <img src="../assets/img/cabuto.png" size= 12></div>--> 
-      </div>
+  <div class="contenido">
+      
  <form class = "centro" #form="ngForm" (ngSubmit)="verificar(form)"> 
   <ion-grid >
     <div class="form" >
       <ion-col align-self-center size-md="5" size-lg="10" size-xs="10"> 
           <ion-item >
-            <ion-input name="correo" type="email" placeholder="Correo Electronico" ngModel required></ion-input>
+            <ion-input name="correo" type="email" placeholder="Correo Electrónico" ngModel required></ion-input>
           </ion-item><br>  
+          <div class = "espacio"></div>
           <ion-item>
-            <ion-input name="contrasena" type="{{showPass ? 'text' : 'password'}}" placeholder="contraseña" ngModel required></ion-input>
+            <ion-input name="contrasena" type="{{showPass ? 'text' : 'password'}}" placeholder="Contraseña" ngModel required></ion-input>
             <button ion-button type="button" clear color="dark" item-right (click)="togglePasswordClick()">
               <ion-icon class="icono-input" text-right  id="iconIntro" [name]="passwordToggleIcon" style="zoom:2.0;"></ion-icon>
             </button>
           </ion-item>
-          <!--<a routerLink='/register'>¿Olvidaste tu contraseña?</a>
-          <p class=ion-text-right ion-text  tappable (click)="forgotPass()">-->
-            <p class=ion-text-right ion-text  tappable (click)="contrasena()">
-          <ion-label style="color: var(--ion-color-naranja-oscuro);">¿Olvidaste tu contraseña?</ion-label>
-      </p><br>
+          <p style="color: var(--ion-color-naranja-oscuro); padding: 0px;" class=ion-text-right (click)="contrasena()">
+          <!--<ion-label style="color: var(--ion-color-naranja-oscuro);">-->¿Olvidaste tu contraseña?<!--/ion-label-->
+      </p>
       </ion-col>
     </div>
-    <div class="ion-text-center" >
+    <div class="button" >
+      <img src="../assets/img/btn_fb.png" (click)="facebook()" >
+      <!--
       <ion-button size="large" expand = "block" class = "button-fb" (click)="facebook()">
         <img src="../assets/img/btn_fb.png" >
-      </ion-button>
+      </ion-button>-->
     </div><br>
-    <!--
-    <div class="ion-text-center" size = 12>
-          <div text-center class = "fb" size = 10>
-              <ion-button size="large" expand="block" class="centrar-control2" style="background-color: #1b5583" (click)="facebook()">
-                <ion-row class = "container">
-                  <ion-col class= "col_fb" size=3>        
-                    <div class= "btn_fb"> <img src="../assets/img/facebook.png"></div>  
-                  </ion-col>
-                  <ion-col class="col_label" size=2>
-                    <div class= "label"> <p text-center ion-text color="primary">
-                <strong class="fuente-color">Ingresa con Facebook </strong> 
-              </p></div>
-                  </ion-col>
-                </ion-row>
-            </ion-button>
-          </div>
-          <ion-button size="large" expand="block" class="centrar-control2" style="background-color: white" (click)="facebook()">
-            <img src="../assets/img/btn_fb.png" size= 15></ion-button>
-      </div><br> -->
   </ion-grid >
-  <div class="ion-text-center" style="color: var(--ion-color-naranja-oscuro);" >¿Eres nuevo? <strong class="fuente-color" ><a style="color: var(--ion-color-naranja-oscuro);" routerLink='/registro'>Registrate aquí</a></strong></div>
+  <!--<div class="ion-text-center" style="color: var(--ion-color-naranja-oscuro);" ><p class = "letras">¿Eres nuevo? <strong class="fuente-color" ><a style="color: var(--ion-color-naranja-oscuro);" routerLink='/registro'>Registrate aquí</a></strong></p></div>-->
+  <div class="ion-text-center"  ><p class = "letras">¿Eres nuevo? <a class= "ruta" routerLink='/registro'>Registrate aquí</a></p></div>
   <ion-footer>
-<ion-toolbar >
+    <!--<router-link class="routerLink" to='/registro'>Registrate aquí</router-link>-->
+<!--<ion-toolbar >-->
   <div>
-    <ion-button class = "inicio" size="large" type="submit" [disabled]="form.invalid" expand="full">Iniciar Sesión</ion-button>
+    <ion-button class = "inicio" size="large" type="submit"  expand="full">Iniciar Sesión</ion-button>
   </div>
-</ion-toolbar>
+<!--</ion-toolbar>-->
 </ion-footer>
 </form>
 </div>
